2005-04-05  Fredrik Edemar  <f_edemar@linux.se>
    * Use a better layout in KChartParameterPieConfigPage and KChartParameterPolarConfigPage.

2005-04-04  Fredrik Edemar  <f_edemar@linux.se>
    * Add the "Create Template From Document" feature to the File menu.
    * The activate-3D property is now the same for bar charts and pie charts so that it is possible to switch between those modes without loosing the setting (this is what the user expects IMHO).
    * The height of the 3D effect for pie charts was not always set in the config dialog and this is fixed now.
    * Bar chart mode: Do not show the flat arrows at the bottom of the lowest chart when dealing with negative numbers.
    * KChartPart::initNullChart() will now generate an empty chart instead of a chart containing 1 cell with the value 0.
    * KChartView::setupPrinter will not add the printing config page if it's only a preview.
    * Not modifying anything in the data editor and pressing OK should not do anything.

2005-04-03  Fredrik Edemar  <f_edemar@linux.se>
	Changes in the data editor:
    * If the data table only has 1 cell which is empty, the whole chart will be parsed as empty. This makes it possible for the user to clear all data.
    * Allow the user to set an empty string as row/column label.

    ----------------------------------------------------------------

    * KChartPart::initTestChart() is renamed generateBarChartTemplate().
    * Translate two strings in that function.
    * Added commented code for calling generateBarChartTemplate() when the user chooses the bar char template. The advantage of this is that the row/column labels won't be translated otherwise. This feature will be activated in KOffice 1.5/2.0 as Inge thought it is too late for such changes before KOffice 1.4.

2005-03-30 Fredrik Edemar <f_edemar@linux.se>
    In KChartColorConfigPage: do not crash when the OK/Apply button is pressed and disable the KColorButton when there isn't any data to config.
